erros de acessibilidade resolvido

--- a/episodios.html
+++ b/episodios.html
@@ -21,7 +21,7 @@
           </div>
           <ul class="nav-list">
             <li><a href="index.html">sobre nós</a></li>
-            <li><a href="episodios.html">episódios</a></li>
+            <li><a href="#conversas">episódios</a></li>
             <li><a href="parceiros.html">parcerias</a></li>
             <li><a href="contato.html">contato</a></li>
           </ul>
@@ -42,7 +42,7 @@
                     <div id="id-conversas">
                         <h3>Tenha acesso a conversas com grandes players do mercado.</h3>
                         <p>Profissionais experientes que já trabalham com a plataforma Zabbix e palestram em grandes eventos da área de tecnologia.</p>
-                        <a href="#">Saber mais</a>
+                        <a href="https://google.com/">Saber mais</a>
                     </div>
                 
                     <div id="tablet">
@@ -60,7 +60,7 @@
     
                 <div>
                     <h4>Estamos sempre mantendo as plataformas com novos episódios.</h4>
-                    <div id="links-plataformas"><a href="#">Acesse agora</a><img id="spotify" src="imgs/spot.svg" alt="logotipo Spotify"><img src="imgs/youtube (1).svg" alt="logotipo Youtube"></div>
+                    <div id="links-plataformas"><a href="https://open.spotify.com/?pfhp=2c2ccb58-8a92-4713-a1c0-8b43b3090b49">Acesse agora</a><img id="spotify" src="imgs/spot.svg" alt="logotipo Spotify"><img src="imgs/youtube (1).svg" alt="logotipo Youtube"></div>
                 </div>
             </div>
         </section>
@@ -73,7 +73,7 @@
                     <h5>Nossa missão é tornar a disseminação de conhecimento mais acessível, de uma forma fácil e descontraída.</h5>
                     <p>Se identificou com a proposta e quer fazer parte, entre em contato para nos conhecermos.</p>
                     <div id="alinhamento-missao">
-                        <a href="#">Saber mais</a>
+                        <a href="https://google.com/">Saber mais</a>
                         <img src="imgs/Group 107.svg" alt="Emoji de uma mão acenando">
                     </div>
                 </div>
@@ -92,11 +92,11 @@
             <img src="imgs/logo-footer.svg" alt="Logotipo do ButecoTech">
             <div>
                 <p>Siga-nos nas redes sociais</p>
-                <a href="#"><img src="imgs/facebook.svg" alt="Logotipo do Facebook"></a>
-                <a href="#"><img src="imgs/youtube.svg" alt="Logotipo do Youtube"></a>
-                <a href="#"><img src="imgs/linkedin.svg" alt="Logotipo do Linkedin"></a>
-                <a href="#"><img src="imgs/twitter.svg" alt="Logotipo do Twitter"></a>
-                <a href="#"><img src="imgs/instagram.svg" alt="Logotipo do Instagram"></a>
+                <a href="https://facebook.com/"><img src="imgs/facebook.svg" alt="Logotipo do Facebook"></a>
+                <a href="https://youtube.com/"><img src="imgs/youtube.svg" alt="Logotipo do Youtube"></a>
+                <a href="https://linkedin.com/"><img src="imgs/linkedin.svg" alt="Logotipo do Linkedin"></a>
+                <a href="https://twitter.com/"><img src="imgs/twitter.svg" alt="Logotipo do Twitter"></a>
+                <a href="https://instagram.com/"><img src="imgs/instagram.svg" alt="Logotipo do Instagram"></a>
             </div>
         </section>
         <section id="footer-mapa">
@@ -123,7 +123,7 @@
                     </address>   
                 </div>
                 <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.6385615572153!2d-46.64342068558599!3d-23.54549886689053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5851fc860dc3%3A0x89bd461a1a005fa1!2sR.%20Sete%20de%20Abril%2C%20252%20-%20Rep%C3%BAblica%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001037-001!5e0!3m2!1spt-BR!2sbr!4v1668799395957!5m2!1spt-BR!2sbr" width="75%" height="50%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe title="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.6385615572153!2d-46.64342068558599!3d-23.54549886689053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5851fc860dc3%3A0x89bd461a1a005fa1!2sR.%20Sete%20de%20Abril%2C%20252%20-%20Rep%C3%BAblica%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001037-001!5e0!3m2!1spt-BR!2sbr!4v1668799395957!5m2!1spt-BR!2sbr" width="75%" height="50%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div> 
         </section>
@@ -145,7 +145,7 @@
         <section id="footer-copyright">
             <p>2022  Copyright by Oktavio.Design  |  Todos os direitos reservados  |  v.2.5.10
             </p>
-            <a href="#"><img src="imgs/contato.svg" alt="ícone de contato (balão de fala)"> contato</a>
+            <a href="https://google.com/"><img src="imgs/contato.svg" alt="ícone de contato (balão de fala)"> contato</a>
         </section>
     </footer>
     <script src="js/script.js"></script>
