adicionado um link para o conteudo principal de parcerias

--- a/parceiros.html
+++ b/parceiros.html
@@ -22,7 +22,7 @@
           <ul class="nav-list">
             <li><a href="index.html">sobre nós</a></li>
             <li><a href="episodios.html">episódios</a></li>
-            <li><a href=".pai2">parcerias</a></li>
+            <li><a href="#calendario">parcerias</a></li>
             <li><a href="contato.html">contato</a></li>
           </ul>
         </nav>
