erros de acessibilidade resolvidos na pagina de contato

--- a/contato.html
+++ b/contato.html
@@ -24,7 +24,7 @@
             <li><a href="index.html">sobre nós</a></li>
             <li><a href="episodios.html">episódios</a></li>
             <li><a href="parceiros.html">parcerias</a></li>
-            <li><a href="contato.html">contato</a></li>
+            <li><a href="#formulario">contato</a></li>
           </ul>
         </nav>
     </header>
@@ -32,7 +32,7 @@
     <main>
         <div id="conteudo-principal">
             <h2>Se você se identificou com o projeto, entre em contato</h2>
-            <a href="#">Contatar</a>
+            <a href="https://google.com/">Contatar</a>
         </div>
 
         <div class="boteco-tech">
@@ -96,11 +96,11 @@
             <img src="imgs/logo-footer.svg" alt="Logotipo do ButecoTech">
             <div>
                 <p>Siga-nos nas redes sociais</p>
-                <a href="#"><img src="imgs/facebook.svg" alt="Logotipo do Facebook"></a>
-                <a href="#"><img src="imgs/youtube.svg" alt="Logotipo do Youtube"></a>
-                <a href="#"><img src="imgs/linkedin.svg" alt="Logotipo do Linkedin"></a>
-                <a href="#"><img src="imgs/twitter.svg" alt="Logotipo do Twitter"></a>
-                <a href="#"><img src="imgs/instagram.svg" alt="Logotipo do Instagram"></a>
+                <a href="https://facebook.com/"><img src="imgs/facebook.svg" alt="Logotipo do Facebook"></a>
+                <a href="https://youtube.com/"><img src="imgs/youtube.svg" alt="Logotipo do Youtube"></a>
+                <a href="https://linkedin.com/"><img src="imgs/linkedin.svg" alt="Logotipo do Linkedin"></a>
+                <a href="https://twitter.com/"><img src="imgs/twitter.svg" alt="Logotipo do Twitter"></a>
+                <a href="https://instagram.com/"><img src="imgs/instagram.svg" alt="Logotipo do Instagram"></a>
             </div>
         </section>
         <section id="footer-mapa">
@@ -127,7 +127,7 @@
                     </address>   
                 </div>
                 <div>
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.6385615572153!2d-46.64342068558599!3d-23.54549886689053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5851fc860dc3%3A0x89bd461a1a005fa1!2sR.%20Sete%20de%20Abril%2C%20252%20-%20Rep%C3%BAblica%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001037-001!5e0!3m2!1spt-BR!2sbr!4v1668799395957!5m2!1spt-BR!2sbr" width="75%" height="50%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe title="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.6385615572153!2d-46.64342068558599!3d-23.54549886689053!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5851fc860dc3%3A0x89bd461a1a005fa1!2sR.%20Sete%20de%20Abril%2C%20252%20-%20Rep%C3%BAblica%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001037-001!5e0!3m2!1spt-BR!2sbr!4v1668799395957!5m2!1spt-BR!2sbr" width="75%" height="50%" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div> 
         </section>
@@ -149,7 +149,7 @@
         <section id="footer-copyright">
             <p>2022  Copyright by Oktavio.Design  |  Todos os direitos reservados  |  v.2.5.10
             </p>
-            <a href="#"><img src="imgs/contato.svg" alt="ícone de contato (balão de fala)"> contato</a>
+            <a href="https://google.com/"><img src="imgs/contato.svg" alt="ícone de contato (balão de fala)"> contato</a>
         </section>
     </footer>
     <script src="js/script.js"></script>
