adicionado submit ao botao

--- a/contato.html
+++ b/contato.html
@@ -82,7 +82,7 @@
                         <i class="fas fa-exclamation-circle"></i>
                         <small>Mensagem de erro</small>
                     </div>
-                    <button>Enviar Formulário</button>
+                    <button type="submit">Enviar Formulário</button>
                 </form>
             </div>
             <div>
